# game

Don't step on the white blocks/: CMakeLists.txt  main.cpp
GobangChess/: CMakeLists.txt
GobangChess/header_file/: AI.h  Chess.h  ChessGame.h  Man.h
GobangChess/source_file/: AI.cpp  Chess.cpp  ChessGame.cpp  Man.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
